--- a/hearttext.html
+++ b/hearttext.html
@@ -31,7 +31,9 @@
   <div id="container" class="container container-background">
     <nav class="menu">
       <h1>
-        <a href="home.html"></a>
+        <a href="index.html">
+           <img src="./images/logo_標準字1.png" alt="Logo">
+        </a>
       </h1>
 
       <ul>
