--- a/hearttext.html
+++ b/hearttext.html
@@ -37,11 +37,11 @@
         </h1>
 
       <ul>
-        <li><a href="#">讀嘉診療所</a></li>
-        <li><a href="vlog.html">嘉一點vlog</a></li>
+        <li><a href="#">https://shi-jia-yan.github.io/hearttext/hearttext.html</a></li>
+        <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
-        <li><a href="article.html">讀嘉記義</a></li>
-        <li><a href="about.html">1+1=4</a></li>
+        <li><a href="https://eudoraaaaa.github.io/Chayi1125/article.html">讀嘉記義</a></li>
+        <li><a href="https://eudoraaaaa.github.io/Chayi1125/about.html">1+1=4</a></li>
       </ul>
       <!-- 漢堡按鈕 -->
       <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
