--- a/hearttext.html
+++ b/hearttext.html
@@ -37,7 +37,7 @@
         </h1>
 
       <ul>
-        <li><a href="#">https://shi-jia-yan.github.io/hearttext/hearttext.html</a></li>
+        <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html"></a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/article.html">讀嘉記義</a></li>
