--- a/hearttext.html
+++ b/hearttext.html
@@ -31,7 +31,7 @@
   <div id="container" class="container container-background">
     <nav class="menu">
        <h1>
-                        <a href="index.html">
+                        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html">
                             <img src="./images/logo_標準字1.png" alt="Logo">
                         </a>
         </h1>
