--- a/finalresult.html
+++ b/finalresult.html
@@ -11,14 +11,14 @@
   <div class="container">
     <nav class="menu">
       <h1>
-        <a href="home.html"></a>
+        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html"></a>
       </h1>
       <ul>
-        <li><a href="#">讀嘉診療所</a></li>
-        <li><a href="vlog.html">嘉一點vlog</a></li>
+        <li><a href="https://shi-jia-yan.github.io/hearttext/question11.html#">讀嘉診療所</a></li>
+        <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
-        <li><a href="article.html">讀嘉記義</a></li>
-        <li><a href="about.html">1+1=4</a></li>
+        <li><a href="https://shi-jia-yan.github.io/hearttext/question11.html#">讀嘉記義</a></li>
+        <li><a href="https://eudoraaaaa.github.io/Chayi1125/about.html">1+1=4</a></li>
       </ul>
       <!-- 漢堡按鈕 -->
       <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
