--- a/gift.html
+++ b/gift.html
@@ -11,7 +11,7 @@
   <div class="container">
     <nav class="menu">
       <h1>
-        <a href="home.html"></a>
+        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html"></a>
       </h1>
       <ul>
         <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">讀嘉診療所</a></li>
