--- a/question10.html
+++ b/question10.html
@@ -23,20 +23,22 @@
 <body>
   <div class="container">
     <nav class="menu">
-
-      <h1>
-        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html"></a>
-      </h1>
-
+       <h1>
+                        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html">
+                            <img src="./images/logo_標準字1.png" alt="Logo">
+                        </a>
+        </h1>
 
       <ul>
-        <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">讀嘉診療所</a></li>
+        <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">獨嘉診療所</a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/article.html">讀嘉記義</a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/about.html">1+1=4</a></li>
-
       </ul>
+      <!-- 漢堡按鈕 -->
+      <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
+    </nav>
       <!-- 漢堡按鈕 -->
       <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
 
