--- a/question10.html
+++ b/question10.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/question10.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>article</title>
   <style>
