--- a/gift.html
+++ b/gift.html
@@ -48,7 +48,7 @@
           <div id="nostalgia"
             onclick="addScoreAndNext('currentQuestion', { influencer: 0, nature: 0, nostalgia: 1, foodie: 0 })">
             <img src="images/blue-gift.png" alt="Nostalgia Gift" style="width:10%;height:auto;">
-            <p class="gift-text">銀色絲帶的深紅色禮物盒<br />使用印有復古圖案的包裝紙</p>
+            <p class="gift-text">銀色絲帶的藍色禮物盒<br />使用印有復古圖案的包裝紙</p>
           </div>
           <div id="foodie"
             onclick="addScoreAndNext('currentQuestion', { influencer: 0, nature: 0, nostalgia: 0, foodie: 1 })">
