--- a/gift.html
+++ b/gift.html
@@ -11,9 +11,11 @@
   <div class="container">
     <nav class="menu">
       <h1>
-        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html"></a>
-      </h1>
-      <ul>
+                    <a href="https://eudoraaaaa.github.io/Chayi1125/index.html">
+                        <img src="./images/logo_標準字1.png" alt="Logo">
+                    </a>
+                </h1>  
+      <ul id="menu-links">
         <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">讀嘉診療所</a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
