--- a/loading.html
+++ b/loading.html
@@ -38,7 +38,7 @@
                 </h1>  
                         
                 <span class="icon" onclick="toggleMenu()">☰</span>     
-               <ul>
+               <ul id="menu-links">
         <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">讀嘉診療所</a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
