--- a/finalresult.html
+++ b/finalresult.html
@@ -11,10 +11,13 @@
   <div class="container">
     <nav class="menu">
       <h1>
-        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html"></a>
+        <a href="https://eudoraaaaa.github.io/Chayi1125/index.html">
+                    <img src="./images/logo_標準字1.png" alt="Logo">
+                </a>
       </h1>
-      <ul>
-        <li><a href="https://shi-jia-yan.github.io/hearttext/question11.html#">讀嘉診療所</a></li>
+       <span class="icon" onclick="toggleMenu()">☰</span>
+      <ul id="menu-links">
+        <li><a href="https://shi-jia-yan.github.io/hearttext/hearttext.html">讀嘉診療所</a></li>
         <li><a href="https://eudoraaaaa.github.io/Chayi1125/vlog.html">嘉一點vlog</a></li>
 
         <li><a href="https://shi-jia-yan.github.io/hearttext/question11.html#">讀嘉記義</a></li>
