--- a/question10.html
+++ b/question10.html
@@ -62,7 +62,7 @@
       <!-- 圖片展示區 -->
       <div class="image-area">
         <h3 id="teacher1">猜猜我在哪？</h3>
-        <img src="photos/IMG_6273.JPG" alt="Location Image" class="location-img">
+        <img src="photos/dessert1.JPG" alt="Location Image" class="location-img">
         <!-- 隐藏的提示框 -->
         <div id="hintBox" style="margin-top:20px;display:none;">
           請根據下方提示找出答案
